<resources>
    <integer name="com_vk_sdk_AppId">6986397</integer>

    <string name="transition_user_first_name">transition:userFirstName</string>
    <string name="transition_user_last_name">transition:userLastName</string>
    <string name="transition_user_login">transition:userLogin</string>
    <string name="transition_user_photo">transition:userPhoto</string>

    <string name="app_name">Groovie</string>
    <string name="apiException">"There is some problem on the server, we will fix it soon"</string>
    <string name="login">Войти</string>
    <string name="register">Зарегестрироваться</string>
    <string name="loginHint">Логин</string>

    #Issues
    <string name="loginFieldEmpty">Login field can not be empty.</string>
    <string name="passwordFieldEmpty">Password field can not be empty.</string>
    <string name="passwordFieldsEmpty">Password fields can not be empty.</string>
    <string name="passwordFieldNotEqual">Password fields should be equal.</string>
    <string name="currentPasswordFieldEmpty">Не указан текущий пароль.</string>
    <string name="currentPasswordIsIncorrect">Текущий пароль не совпадает с введенным.</string>

    <string name="emptyAuthData">Specified user didn\'t found or simply doesn\'t exists.</string>

    <string name="getAccount">Еще нет аккаунта?</string>

    #Авторизация
    <string name="loginFail">Не правильный логин или пароль</string>
    <string name="registerFail">Неудача при регистрации</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Выйти</string>
    <string name="userInfoFull">Редактировать</string>
    <string name="infoBlockFirts">Укажите имя и, если хотите, добавьте фотографию для вашего профиля.</string>
    <string name="profileReadactor">Редактирование</string>
    <string name="userprofilephoto">userProfilePhoto</string>
    <string name="ProfileLogin">Логин</string>
    <string name="ProfilePassword">Пароль</string>
    <string name="infoBlockSecond">Вы можете изменить данные авторизации, если считаете, что они скомпрометированы.
    </string>
    <string name="passwordHint">123@meh{()}</string>
    <string name="infoBlockThird">Вы можете оставить отзыв, написать обращение или найти информацию по интересующим
        вопросам.
    </string>
    <string name="lPasswordHint">Пароль</string>
    <string name="repasswordHint">Пароль еще раз</string>
    <string name="feedback">Отзыв</string>
    <string name="titleBackButton">Назад</string>
    <string name="leaveFeedback">Оставить</string>
    <string name="feedbackActivityInfo2">Обращение каждого пользователя будет прочитано и принято во внимание.
        \n\nЕсли проблема имеет срочный характер или является багрепортом, то после принятия необходимых мер, мы
        оповестим Вас о
        проделанной работе (если отзыв был не анонимен).
    </string>
    <string name="titleHint">Укажите тему обращения</string>
    <string name="newsBlockTitle">Новостная лента</string>
    <string name="podrobnee">Подробнее</string>
    <string name="obnovleniya">Обновления</string>
    <string name="aboutUsFirstBlock">Это приложение разработано командой из одного разработчика:\n\n
        Никитой Могиленко.
    </string>
    <string name="aboutUsSecondBlock">В ходе разработки велась группа, посвященная этапам и процессам, с которыми мне
        пришлось столкнуться в ходе
        разработки.
    </string>
    <string name="aboutUsThirdBlock">Если при использовании приложения возникают трудности, либо же вы нашли какую-то
        неисправность, то прошу Вас
        оставить обращение, которое сразу же попадет ко мне.
    </string>
</resources>
