<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".app.fragments.main.ProfileFragment" android:orientation="vertical"
              android:background="@color/colorPrimaryDark">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/profileHeader">

        <ImageView
                android:src="@drawable/background"
                android:transitionName="@string/transition_user_photo"
                android:background="@drawable/shadow"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/userPhoto"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:contentDescription="@string/userprofilephoto"
                app:srcCompat="@drawable/background"/>
        <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                app:layout_constraintBottom_toTopOf="@+id/userLogin" app:layout_constraintStart_toStartOf="parent"
        >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:transitionName="@string/transition_user_first_name"
                    android:id="@+id/userFirstName"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/colorAccentHelper" android:paddingLeft="10dp" android:paddingTop="2dp"
                    android:paddingRight="0dp" android:textSize="20sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:transitionName="@string/transition_user_last_name"
                    android:id="@+id/userLastName"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                    android:textColor="@color/colorAccentHelper" android:paddingLeft="10dp" android:paddingTop="2dp"
                    android:paddingRight="0dp" android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/userFirstName"/>
        </android.support.constraint.ConstraintLayout>
        <TextView
                android:layout_width="wrap_content"
                android:textAlignment="viewStart"
                android:transitionName="@string/transition_user_login"
                android:layout_height="33dp"
                android:id="@+id/userLogin"
                android:textSize="12sp"
                android:paddingLeft="10dp"
                app:layout_constraintStart_toStartOf="parent" android:textColor="@color/colorAccent"
                android:paddingRight="10dp"
                app:layout_constraintBottom_toBottomOf="parent" android:paddingBottom="10dp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileHeader" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:layout_marginTop="10dp">
        <Button
                android:text="@string/userInfoFull"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:id="@+id/profileRedactor"
                android:textAllCaps="false"
                android:background="@color/colorAccent" android:textColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:elevation="20dp"/>
        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.462"
                app:layout_constraintTop_toBottomOf="@+id/profileRedactor" android:id="@+id/mainInfo"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/logoutbtn" android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" android:elevation="20dp">
            <TextView
                    android:text="Подключенные сети:"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingLeft="10dp" android:paddingRight="24dp" android:paddingTop="10dp"
                    android:paddingBottom="10dp" android:textColor="@color/colorAccentHelper" android:textSize="16sp"/>
            <android.support.v7.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/connectedNetworksList" android:paddingLeft="24dp" android:paddingRight="24dp"
                    android:paddingTop="10dp" android:paddingBottom="10dp"/>
        </android.support.constraint.ConstraintLayout>
        <Button
                android:text="@string/logout"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:id="@+id/logoutbtn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:background="#BAF01212"
                android:textColor="@color/colorAccent" android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintBottom_toBottomOf="parent" android:elevation="20dp"
                android:layout_marginBottom="10dp"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>