<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".app.fragments.login.RegisterFragment"
                                             android:background="@color/colorPrimaryDark">
    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/login" android:layout_marginTop="280dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints=""
            app:layout_constraintHorizontal_bias="0.0" android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent" android:textColorHint="@color/colorAccent"
            android:paddingBottom="2dp" android:paddingRight="20dp" android:paddingLeft="10dp"
            android:hint="@string/loginHint" android:textSize="14sp" android:textAlignment="viewEnd"
            android:elevation="30dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pass"
            android:layout_marginStart="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/login"
            android:background="@color/colorPrimary" android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" android:paddingRight="10dp"
            android:paddingBottom="2dp" android:textSize="14sp" android:paddingLeft="20dp"
            android:hint="@string/lPasswordHint" android:elevation="30dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/repass"
            android:layout_marginStart="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/pass"
            android:background="@color/colorPrimary" android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" android:paddingLeft="20dp" android:paddingRight="10dp"
            android:paddingBottom="2dp" android:textSize="14sp" android:hint="@string/repasswordHint"
            android:elevation="30dp"/>
    <Button
            android:text="@string/register"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:id="@+id/rgbtn" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="40dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/repass" android:layout_marginTop="8dp"
            android:background="@color/colorAccent" android:textAllCaps="false" android:textSize="15sp"
            android:elevation="30dp"/>
</android.support.constraint.ConstraintLayout>