<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".app.activities.UserProfileActivity">
    <android.support.constraint.ConstraintLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" android:id="@+id/constraintLayout2">
        <TextView
                android:text="@string/profileReadactor"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/pageTitle"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:textAlignment="center"
                android:paddingTop="10dp" android:textSize="22sp" android:textColor="@color/colorAccentHelper"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
        <Button
                android:text="Готово"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="@+id/pageTitle"
                app:layout_constraintBottom_toBottomOf="parent" android:textAllCaps="false"
                android:background="@color/colorPrimaryDark" android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" android:textSize="16sp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:id="@+id/constraintLayout">

        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/mainInfoUserBlock" android:background="@color/colorPrimary" android:elevation="10dp">

            <ImageView
                    android:layout_width="70dp"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/transition_user_photo"
                    android:layout_height="70dp" app:srcCompat="@drawable/background"
                    android:id="@+id/userPhoto"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="24dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:inputType="textPersonName"
                    android:transitionName="@string/transition_user_first_name"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:id="@+id/userFirstName"
                    android:textSize="15sp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/userPhoto"
                    app:layout_constraintHorizontal_bias="0.0" android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent" android:shadowColor="#00D5CCCC"
                    android:autoText="false" android:importantForAutofill="auto" android:paddingLeft="15dp"
                    android:paddingRight="15dp" android:paddingBottom="10dp" android:paddingTop="5dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:transitionName="@string/transition_user_last_name"
                    android:background="@android:color/transparent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/userLastName"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/userFirstName"
                    app:layout_constraintStart_toEndOf="@+id/userPhoto"
                    android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/colorAccent" android:textColorHint="@color/colorAccent"
                    android:paddingLeft="15dp" android:paddingRight="15dp" android:paddingTop="5dp"/>
        </android.support.constraint.ConstraintLayout>
        <TextView
                android:text="@string/infoBlockFirts"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/info1"
                app:layout_constraintTop_toBottomOf="@+id/mainInfoUserBlock" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingLeft="24dp" android:paddingRight="24dp" android:textSize="13sp"
                android:background="#36000000" android:textColor="@color/colorAccent" android:paddingTop="10dp"
                android:paddingBottom="20dp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/constraintLayout5">

        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/constraintLayout4">

            <TextView
                    android:text="@string/ProfileLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/labelLogin"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="15sp" android:paddingLeft="24dp" android:paddingRight="24dp"
                    android:paddingTop="10dp" android:textColor="@color/colorAccentHelper"
                    android:paddingBottom="10dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:transitionName="@string/transition_user_login"
                    android:ems="10"
                    android:id="@+id/userLogin"
                    app:layout_constraintTop_toBottomOf="@+id/labelLogin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:background="@color/colorPrimary"
                    android:textColor="@color/colorAccent" android:textColorHint="@color/colorAccent"
                    android:paddingTop="10dp" android:paddingLeft="24dp" android:paddingRight="24dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintHorizontal_bias="0.0" android:importantForAutofill="no"
                    android:layout_marginEnd="24dp" android:textSize="14sp"
                    android:shadowColor="@color/colorAccentHelper"
                    android:elevation="10dp"/>
            <TextView
                    android:text="@string/ProfilePassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/labelPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="15sp" android:paddingLeft="24dp" android:paddingRight="24dp"
                    android:paddingTop="5dp" android:textColor="@color/colorAccentHelper"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toBottomOf="@+id/userLogin" android:paddingBottom="10dp"
            />
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/userCurrentPassword"
                    app:layout_constraintStart_toStartOf="parent" android:background="@color/colorPrimary"
                    android:textColor="@color/colorAccent" android:textColorHint="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:importantForAutofill="no"
                    app:layout_constraintTop_toBottomOf="@+id/labelPassword"
                    android:paddingLeft="24dp" android:paddingRight="24dp"
                    android:textSize="14sp" android:hint="@string/passwordHint"
                    app:layout_constraintEnd_toStartOf="@+id/labelCurrentPass" android:elevation="10dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/userNewPassword"
                    app:layout_constraintStart_toStartOf="parent" android:background="@color/colorPrimary"
                    android:textColor="@color/colorAccent" android:textColorHint="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:importantForAutofill="no"
                    app:layout_constraintTop_toBottomOf="@+id/userCurrentPassword"
                    android:paddingLeft="24dp" android:paddingRight="24dp"
                    android:textSize="14sp" android:hint="@string/passwordHint" android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/labelNewPass" android:elevation="10dp"/>
            <TextView
                    android:text="новый"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/labelNewPass" app:layout_constraintEnd_toEndOf="parent"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp" android:paddingTop="10dp" android:paddingLeft="10dp"
                    android:textColor="@color/colorAccent" android:textColorHint="@color/colorAccent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/labelCurrentPass"/>
            <TextView
                    android:text="текущий"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/labelCurrentPass" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelPassword" android:paddingRight="10dp"
                    android:paddingBottom="10dp" android:paddingTop="10dp" android:paddingLeft="10dp"
                    android:textColor="@color/colorAccent" android:textColorHint="@color/colorAccent"/>
        </android.support.constraint.ConstraintLayout>
        <TextView
                android:text="@string/infoBlockSecond"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/info2"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:background="#36000000"
                android:paddingLeft="24dp" android:paddingRight="24dp" android:paddingTop="10dp"
                android:paddingBottom="20dp" android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" android:textSize="13sp" android:layout_marginTop="16dp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:text="Полезные разделы"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingLeft="24dp" android:paddingRight="24dp" android:paddingTop="10dp"
                android:paddingBottom="10dp" android:textSize="16sp" android:textColor="@color/colorAccentHelper"/>
        <android.support.v7.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingLeft="24dp" android:paddingRight="24dp"
                android:paddingTop="10dp" android:id="@+id/faqList"
                app:layout_constraintBottom_toTopOf="@+id/textView7"
                app:layout_constraintVertical_bias="0.0"/>
        <TextView
                android:text="@string/infoBlockThird"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView7" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingTop="10dp" android:paddingLeft="24dp" android:paddingRight="24dp"
                android:paddingBottom="20dp" android:textColor="@color/colorAccent"
                android:background="#36000000" android:textSize="13sp"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>